# minimal-DL-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
dezero/: __init__.py  core.py  core_simple.py  datasets.py  functions.py  layers.py  models.py  optimizers.py  transforms.py  utils.py
steps/: step01.ipynb  step01_상자로서의_변수.ipynb  step02.ipynb  step02_변수를_낳는_함수.ipynb  step03.ipynb  step03_함수_연결.ipynb  step04.ipynb  step04_수치_미분.ipynb  step05.ipynb  step05_역전파_이론.ipynb  step06_수동_역전파.ipynb  step07_역전파_자동화.ipynb  step08_재귀에서_반복문으로.ipynb  step09_함수를_더_편리하게.ipynb  step10_테스트.ipynb  step11_가변_길이_인수(순전파_편).ipynb  step12_가변_길이_인수(개선_편).ipynb  step13_가변_길이_인수(역전파_편).ipynb  step14_같은_변수_반복_사용.ipynb  step15_복잡한_계산_그래프(이론_편).ipynb  step16_복잡한_계산_그래프(구현_편).ipynb  step17_메모리_관리와_순환_참조.ipynb  step18_메모리_절약_코드.ipynb  step19_변수_사용성_개선.ipynb  step20_연산자_오버로드(1).ipynb  step21_연산자_오버로드(2).ipynb  step22_연산자_오버로드(3).ipynb  step23_패키지로_정리.ipynb  step24_복잡한_함수의_미분.ipynb  step25_계산_그래프_시각화(1).ipynb  step26_계산_그래프_시각화(2).ipynb  step27_테일러_급수_미분.ipynb  step28_함수_최적화.ipynb  step29_뉴턴_방법으로_푸는_최적화(수동_계산).ipynb  step30_고차_미분(준비_편).ipynb  step31_고차_미분(이론_편).ipynb  step32_고차_미분(구현_편).ipynb  step33_뉴턴_방법으로_푸는_최적화(자동_계산).ipynb  step34_sin_함수_고차_미분.ipynb  step35_고차_미분_계산_그래프.ipynb  (+24 more)
